--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Cursos da Alura alterando Titulo 2</title>
+    <title>Cursos da Alura alterando Titulo 4</title>
 </head>
 <body>
     <ul>
         <li>Vagrant</li>
-        <li>Docker</li>
+        <li>Docker ainda é desconheido por mim </li>
         <li>Ansible</li>
         <li>Integração Contínua Do curso GitHub 18 de marco de 2022</li>
     </ul>
